<resources>
    <string name="app_name">Visit Venice</string>
    <string name="category_welcome">Welcome to Venice</string>
    <string name="category_sights">Venice Top Sights</string>
    <string name="category_hotels">Venice Hotels</string>
    <string name="category_restaurants">Venice Restaurants</string>
    <string name="category_attractions">Venice Attractions</string>
    <string name="name_placeholder">name</string>
    <string name="address_placeholder">address</string>
    <string name="image_id_placeholder">image</string>
    <string name="description_placeholder">description</string>
    <string name="url_placeholder">url</string>
    <string name="welcome_image_description">Photo of Venice.</string>
    <string name="place_image_description">Photo of the described place.</string>
    <string name="welcome_image_label_1">Venice</string>
    <string name="welcome_image_label_2">Veneto, Italy</string>
    <string name="welcome_text">Venice, the capital of northern Italy\'s Veneto region,
        is built on more than 100 small islands in a lagoon in the Adriatic Sea.
        It has no roads, just canals – including the Grand Canal thoroughfare –
        lined with Renaissance and Gothic palaces. The central square, Piazza San Marco,
        contains St. Mark\'s Basilica, which is tiled with Byzantine mosaics,
        and the Campanile bell tower offering views of the city’s red roofs.\n\n
        The Gothic pink-and-white-marble Doge\'s Palace sits on the east
        side of the piazza. Before the Christian holiday of Lent, this area becomes the epicenter
        of Venice\'s Carnival, where partygoers dress in elaborate masks and costumes.
        A gondola ride away are the Peggy Guggenheim Collection, an influential gallery
        of modern art, and the Galleria dell\'Accademia, a museum of Renaissance-era and Vedutisti
        paintings. The covered Rialto foot bridge leads to a market that supplies many of the
        city\'s fish-focused Venetian restaurants.</string>
    <string name="grand_canal_name">Grand Canal</string>
    <string name="grand_canal_address">30100 Venice, Italy</string>
    <string name="grand_canal_description">The banks of the Grand Canal are lined with more than
        170 buildings, most of which date from the 13th to the 18th century, and demonstrate
        the welfare and art created by the Republic of Venice. The noble Venetian families faced
        huge expenses to show off their richness in suitable palazzos; this contest reveals
        the citizens\’ pride and the deep bond with the lagoon. Amongst the many are
        the Palazzi Barbaro, Ca\' Rezzonico, Ca\' d\'Oro, Palazzo Dario, Ca\' Foscari,
        Palazzo Barbarigo and to Palazzo Venier dei Leoni, housing the Peggy Guggenheim Collection.
        The churches along the canal include the basilica of Santa Maria della Salute.
        Centuries-old traditions, such as the Historical Regatta,
        are perpetuated every year along the Canal.\n\n
        Because most of the city\'s traffic goes along the Canal rather than across it, only one
        bridge crossed the canal until the 19th century, the Rialto Bridge. There are currently
        three more bridges, the Ponte degli Scalzi, the Ponte dell\'Accademia,
        and the controversial Ponte della Costituzione from 2008, designed by Santiago Calatrava,
        connecting the train station to Piazzale Roma, one of the few places in Venice where buses
        and cars can enter. As was usual in the past, people can still take a ferry ride across
        the canal at several points by standing up on the deck of a simple gondola called a
        traghetto, although this service is less common than even a decade ago.\n\n
        Most of the palaces emerge from water without pavement. Consequently,
        one can only tour past the fronts of the buildings on the grand canal by boat.</string>
    <string name="grand_canal_url">https://en.wikipedia.org/wiki/Grand_Canal_(Venice)</string>
    <string name="st_marks_basilica_name">Saint Mark\'s Basilica</string>
    <string name="st_marks_basilica_address">Piazza San Marco, 328, 30100\u00A0Venice, Italy</string>
    <string name="st_marks_basilica_description">The Patriarchal Cathedral Basilica of Saint Mark
        (Italian: Basilica Cattedrale Patriarcale di San Marco), commonly known as Saint Mark\'s
        Basilica (Italian: Basilica di San Marco; Venetian: Baxéłega de San Marco),
        is the cathedral church of the Roman Catholic Archdiocese of Venice, northern Italy.
        It is the most famous of the city\'s churches and one of the best known examples
        of Italo-Byzantine architecture. It lies at the eastern end of the Piazza San Marco,
        adjacent and connected to the Doge\'s Palace. Originally it was the chapel of the Doge,
        and has only been the city\'s cathedral since 1807, when it became the seat of the
        Patriarch of Venice, archbishop of the Roman Catholic Archdiocese of Venice,
        formerly at San Pietro di Castello.\n\n
        For its opulent design, gold ground mosaics, and its status as a symbol of Venetian wealth
        and power, from the 11th century on the building has been known by the nickname
        Chiesa d\'Oro (Church of gold).</string>
    <string name="st_marks_basilica_url">http://www.basilicasanmarco.it/?lang=en</string>
    <string name="doges_palace_name">Doge\'s Palace</string>
    <string name="doges_palace_address">San Marco, 1, 30124\u00A0Venice, Italy</string>
    <string name="doges_palace_description">In 810, Doge Angelo Partecipazio moved the seat of
        government from the island of Malamocco to the area of the present-day Rialto, when it was
        decided a palatium duci, a ducal palace, should be built. However, no trace remains of that
        9th-century building as the palace was partially destroyed in the 10th century by a fire.
        The following reconstruction works were undertaken at the behest of Doge Sebastiano Ziani
        (1172–1178). A great reformer, he would drastically change the entire layout of the
        St. Mark\'s Square. The new palace was built out of fortresses, one façade to the Piazzetta,
        the other overlooking the St. Mark\'s Basin. Although only few traces remain of that palace,
        some Byzantine-Venetian architecture characteristics can still be seen at the ground floor,
        with the wall base in Istrian stone and some herring-bone pattern brick paving. Political
        changes in the mid-13th century led to the need to re-think the palace\'s structure due to
        the considerable increase in the number of the Great Council\'s members. The new Gothic
        palace\'s constructions started around 1340, focusing mostly on the side of the building
        facing the lagoon. Only in 1424, did Doge Francesco Foscari decide to extend the rebuilding
        works to the wing overlooking the Piazzetta, serving as law-courts, and with a ground floor
        arcade on the outside, open first floor loggias running along the façade, and the internal
        courtyard side of the wing, completed with the construction of the Porta della Carta (1442).
        \n\nIn 1483, a violent fire broke out in the side of the palace overlooking the canal, where
        the Doge\'s Apartments were. Once again, an important reconstruction became necessary and
        was commissioned from Antonio Rizzo, who would introduce the new Renaissance language to the
        building\'s architecture. An entire new structure was raised alongside the canal, stretching
        from the ponte della Canonica to the Ponte della Paglia, with the official rooms of the
        government decorated with works commissioned from Vittore Carpaccio, Giorgione,
        Alvise Vivarini and Giovanni Bellini. Another huge fire in 1547 destroyed some of the rooms
        on the second floor, but fortunately without undermining the structure as a whole.
        Refurbishment works were being held at the palace when on 1577 a third fire destroyed
        the Scrutinio Room and the Great Council Chamber, together with works by Gentile da Fabriano,
        Pisanello, Alvise Vivarini, Vittore Carpaccio, Giovanni Bellini, Pordenone, and Titian.
        In the subsequent rebuilding work it was decided to respect the original Gothic style,
        despite the submission of a neo-classical alternative designs by the influential Renaissance
        architect Andrea Palladio. However, there are some classical features — for example, since
        the 16th century, the palace has been linked to the prison by the Bridge of Sighs.
        As well as being the ducal residence, the palace housed political institutions of the
        Republic of Venice until the Napoleonic occupation of the city in 1797, when its role
        inevitably changed. Venice was subjected first to French rule, then to Austrian, and finally
        in 1866 it became part of Italy. Over this period, the palace was occupied by various
        administrative offices as well as housing the Biblioteca Marciana and other important
        cultural institutions within the city.\n\n
        By the end of the 19th century, the structure was showing clear signs of decay, and the
        Italian government set aside significant funds for its restoration and all public offices
        were moved elsewhere, with the exception of the State Office for the protection of historical
        Monuments, which is still housed at the palace\'s loggia floor. In 1923, the Italian State,
        owner of the building, entrusted the management to the Venetian municipality to be run as a
        museum. Since 1996, the Doge\’s Palace has been part of the Venetian museums network, which
        has been under the management of the Fondazione Musei Civici di Venezia since 2008.</string>
    <string name="doges_palace_url">http://palazzoducale.visitmuve.it/en/home/</string>
    <string name="piazza_san_marco_name">Piazza San Marco</string>
    <string name="piazza_san_marco_address">Piazza San Marco, 30100\u00A0Venice, Italy</string>
    <string name="piazza_san_marco_description">Piazza San Marco (Venetian: Piasa San Marco),
        often known in English as St Mark\'s Square, is the principal public square of Venice, Italy,
        where it is generally known just as la Piazza ("the Square"). All other urban spaces in the
        city (except the Piazzetta and the Piazzale Roma) are called campi ("fields"). The Piazzetta
        ("little Piazza/Square") is an extension of the Piazza towards the lagoon in its south east
        corner (see plan). The two spaces together form the social, religious and political centre
        of Venice and are commonly considered together.\n\n
        A remark usually attributed (though without proof) to Napoleon calls the Piazza San Marco
        "the drawing room of Europe".</string>
    <string name="piazza_san_marco_url">
        http://www.associazionepiazzasanmarco.it/it/visita-virtuale-piazza-san-marco.php</string>
    <string name="rialto_bridge_name">Rialto Bridge</string>
    <string name="rialto_bridge_address">Sestiere San Polo, 30125\u00A0Venice, Italy</string>
    <string name="description_more_info">more info</string>
</resources>